# Chat-With-CUHKSZ

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  README.md  docker-compose.yml  vcpkg.json
.github/workflows/: backend-docker-package.yml  frontend-linux-package.yml  frontend-release.yml  frontend-windows-package.yml
backend/: CMakeLists.txt  main.cpp  vcpkg.json
backend/include/Agent/: Agent.h
backend/include/Client/: Client.h
backend/include/History/: History.h
backend/include/Knowledge/: KnowledgeBase.h
backend/include/Model/: Model.h
backend/include/Server/: Server.h
backend/include/System/: Blackboard.h  Booking.h  CurlGlobal.h  Email.h  Libary.h  Sis.h  System.h  Tools.h
backend/src/: config.cpp
backend/src/Agent/: Agent.cpp
backend/src/Client/: Client.cpp
backend/src/History/: History.cpp
backend/src/Knowledge/: KnowledgeBase.cpp
backend/src/Model/: Model.cpp  openai.cpp
backend/src/Server/: Server.cpp
backend/src/System/: Blackboard.cpp  Booking.cpp  CurlGlobal.cpp  Email.cpp  Libary.cpp  Sis.cpp  System.cpp  Tools.cpp  Tools.h
backend/test/: test_agent.cpp  test_blackboard.cpp  test_booking.cpp  test_curl_protocol.cpp  test_email.cpp  test_knowledge.cpp  test_libary.cpp  test_libcurl.cpp  test_server.cpp  test_sis.cpp  test_system.cpp
dev_docker/: Dockerfile  docker-compose.yml
frontend/: CMakeLists.txt  vcpkg.json
frontend/include/Client/: Client.h
frontend/include/Server/: Server.h
frontend/qt/: main.cpp
frontend/src/: logo.rc  main.cpp  qnchatmessage.cpp  qnchatmessage.h  resources.qrc
frontend/src/Client/: Client.cpp
reference/blackboard/: cli.py  event.py  login.py  main.py  retriever.py
reference/booking/: booker.py  config.json  event.py  login.py  main.py  retriever.py
reference/sis/: main.py
